--- a/authorization/oauth-service/api-reference/api.yml
+++ b/authorization/oauth-service/api-reference/api.yml
@@ -306,14 +306,14 @@ paths:
         in: header
         required: true
         content:
-          application/x-www-form-urlencoded:
+          application/json:
             schema:
               type: string
-              example: application/x-www-form-urlencoded
+              example: application/json
       requestBody:
         description: ""
         content:
-          application/x-www-form-urlencoded:
+          application/json:
             schema:
               $ref: '#/components/schemas/AccessTokenRequest'
             examples:
