COP-3442 examples not formatted in catalog

--- a/catalogs-and-categories/catalog/api-reference/api.yml
+++ b/catalogs-and-categories/catalog/api-reference/api.yml
@@ -147,6 +147,27 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Catalog'
+              examples:
+                Catalog example:
+                  value: 
+                    - id: "3456454"
+                      name:
+                        en: This is a catalog
+                      description:
+                        en: This catalog is used as an example
+                      status: VISIBLE
+                      visibility:
+                        visible: true
+                        from: 2022-02-24T20:44:43.169Z
+                        to: 2023-07-24T20:44:43.169Z
+                      publishedSites:
+                        - Main
+                      categoryIds:
+                        - "3249485"
+                      metadata:
+                        version: 1
+                        updatedAt: 2022-02-24T20:44:43.169Z
+                        createdAt: 2022-02-24T20:44:43.169Z
         "400":
           description: Request was syntactically incorrect. Details will be provided
             in the response payload.
@@ -744,8 +765,7 @@ components:
       properties:
         id:
           type: string
-          description: "Catalog's unique identifier, generated when the catalog is\
-            \ created."
+          description: "Catalog's unique identifier, generated when the catalog is created."
         name:
           allOf:
             - $ref: '#/components/schemas/Object'
@@ -776,25 +796,6 @@ components:
           items:
             type: string
       description: Definition of a catalog
-      example:
-        id: "3456454"
-        name:
-          en: This is a catalog
-        description:
-          en: This catalog is used as an example
-        status: VISIBLE
-        visibility:
-          visible: true
-          from: 2022-02-24T20:44:43.169Z
-          to: 2023-07-24T20:44:43.169Z
-        publishedSites:
-          - Main
-        categoryIds:
-          - "3249485"
-        metadata:
-          version: 1
-          updatedAt: 2022-02-24T20:44:43.169Z
-          createdAt: 2022-02-24T20:44:43.169Z
     CreateCatalog:
       required:
         - name
