--- a/catalogs-and-categories/catalog/api-reference/api.yml
+++ b/catalogs-and-categories/catalog/api-reference/api.yml
@@ -13,7 +13,7 @@ security:
   - OAuth2: []
 tags:
   - name: List catalogs
-    descritpion: Retrieve lists of catalogs
+    description: Retrieve lists of catalogs
   - name: Catalog management
     description: Manage catalogs
 paths:
