--- a/companies-and-customers/customer-management/api-reference/api.yml
+++ b/companies-and-customers/customer-management/api-reference/api.yml
@@ -989,7 +989,7 @@ paths:
     parameters:
       - $ref: '#/components/parameters/tenant'
     post:
-      summary: Logging in a customer with Auth0
+      summary: Logging in a customer with social login
       operationId: POST-customer-login-customer-by-auth0
       responses:
         '200':
@@ -1000,7 +1000,25 @@ paths:
                 description: ''
                 type: object
                 properties:
-                  customerNumber:
+                  social_access_token:
+                    type: string
+                  social_id_token:
+                    type: string
+                  refresh_token:
+                    type: string
+                  refresh_token_expires_in:
+                    type: string
+                  session_idle_time:
+                    type: integer
+                  token_type:
+                    type: string
+                  access_token:
+                    type: string
+                  saas_token:
+                    type: string
+                  expires_in:
+                    type: string
+                  scope:
                     type: string
         '400':
           $ref: '#/components/responses/400_bad_request'
@@ -1012,7 +1030,25 @@ paths:
           in: header
           name: session-id
           description: Anonymous customer's unique session identifier.
+          required: false
+        - schema:
+            type: string
+          in: query
+          name: code
+          description: The authorization code received from the identity provider.
           required: true
+        - schema:
+            type: string
+          in: query
+          name: redirect_uri
+          description: The redirect URI that was used in the initial authorization request.
+          required: true
+        - schema:
+            type: string
+          in: query
+          name: code_verifier
+          description: Required only if using PKCE (Proof Key for Code Exchange) flow.
+          required: false
       description: |-
         Logs in a customer using an authentication code from Auth0 and retrieves a standard customer token.
         ***
@@ -1023,18 +1059,6 @@ paths:
         - Authentication and authorization
       security:
         - AnonymousAccessToken: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Auth0Request'
-            examples:
-              Request example:
-                value:
-                  email: example@customer.com
-                  name: John Doe
-                  provider: string
-        description: ''
 components:
   schemas:
     AccountId:
@@ -1529,21 +1553,7 @@ components:
         token:
           type: string
           description: Token received by the customer through email.
-    Auth0Request:
-      title: Auth0Request
-      type: object
-      properties:
-        email:
-          type: string
-          description: Customer's email address.
-        name:
-          type: string
-          description: Customer's name.
-        picture:
-          type: string
-        provider:
-          type: string
-          description: Identity provider.
+
   responses:
     409_conflict:
       description: ''
